Fix: Remove duplicated setting.